--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
     "postinstall": "prisma generate"
   },
   "dependencies": {
@@ -31,7 +32,9 @@
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.3",
+    "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
     "prisma": "^4.1.0",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
